--- a/demo-scripts/templates/cp-jwt-support.yaml
+++ b/demo-scripts/templates/cp-jwt-support.yaml
@@ -1,3 +1,11 @@
   components:
     xcp:
       centralAuthMode: JWT
+      kubeSpec:
+        overlays:
+        - apiVersion: install.xcp.tetrate.io/v1alpha1
+          kind: EdgeXcp
+          name: edge-xcp
+          patches:
+          - path: spec.centralAuthJwt.centralSni
+            value: central.xcp.tetrate.io
